# box3_repo

./: .gitignore  README.md  diy_export.txt  sdkconfig
main/: CMakeLists.txt  idf_component.yml  main.c
main/audio/: audio.c  audio.h
main/game/: game.c  game.h  scene.h
main/imu/: imu.c  imu.h
main/input/: input.c  input.h
main/scenes/: play_scene.c  play_scene.h
