idf_component_register(
    SRCS
        "main.c"
        "game/game.c"
        "input/input.c"
        "scenes/play_scene.c"
        "audio/audio.c"
        "imu/imu.c"
    INCLUDE_DIRS
        "."
        "game"
        "input"
        "scenes"
        "audio"
        "imu"
    REQUIRES
        espressif__esp-box-3
        espressif__esp_lvgl_port
        espressif__esp_codec_dev
        espressif__icm42670        
)
